--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
   }
 
   btn.addEventListener('click', () => {
-    btn.innerHTML = '<i class="fa-solid fa-heart"></i>&nbsp; Playing';
+    btn.innerHTML = '<i class="fa-solid fa-cat"></i>&nbsp; Playing';
     btn.disabled = true;
     updateTimer();
 
